@@ -1,17 +1,0 @@
-# modemmanager - modem manager
-#
-# The ModemManager daemon manages the system's mobile broadband connections
-# for NetworkManager.
-
-description	"modem connection manager"
-
-start on starting network-manager
-stop on stopped network-manager
-
-respawn
-
-pre-start script
-    [ -x /usr/sbin/ModemManager ] || stop
-end script
-
-exec /usr/sbin/ModemManager
